--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-lightbox": "^0.8.1",
+    "react-native-looped-carousel": "^0.1.13",
     "react-native-maps": "0.27.1",
     "react-native-web": "~0.11.7"
   },
